fixed marker overflow in sidebar, and rezising for mobile

--- a/src/components/mapContainer/Container.css
+++ b/src/components/mapContainer/Container.css
@@ -28,12 +28,12 @@ button {
   background-color: cadetblue;
 }
 
-.logOutButtonField {
+/* .logOutButtonField {
 
   float:left;
   margin-top: 10px;
   margin-left: 10px;
-}
+} */
 
  .logOutButton {
   font-weight: bold;
@@ -56,6 +56,43 @@ button {
   border-right-color: #8c0000;
 }
 
+/* iphone 5/se */
+@media screen and (max-width: 600px) {
+  .logOutButton {
+    /* margin: auto; */
+    margin-left: 0px;
+    margin-bottom: 10%;
+    /* display: flex; */
+    /* justify-content: flex-end; */
+  }
+
+  .addButton{
+    margin-top: 0%;
+  }
+
+  .myMarkerButton{
+    margin-top: 3%;
+  }
+
+
+}
+
+@media screen and (max-width: 400px) {
+  .logOutButton {
+    margin-left: 27%;
+    margin-bottom: 0px;
+  }
+
+  .addButton{
+    margin-top: 3%;
+  }
+
+  .myMarkerButton{
+    margin-top: 3%;
+  }
+
+}
+
 /* animation */
 .userBar {
   width: 90%;
@@ -69,6 +106,7 @@ button {
   border-left-color: #42c5f4;
   border-right-color: #42c5f4;
   font-weight: bold;
+  margin-right: 3%;
 }
 .addButton:hover {
   color: rgba(245, 245, 245, 0.877);
@@ -176,6 +214,7 @@ padding: 30px;
   color: rgba(245, 245, 245, 0.877);
 }
 
+
 .locationTextBoxes {
   display: flex;
   flex-direction: column;
@@ -186,11 +225,12 @@ padding: 30px;
 .locationLabel {
   font-size: 12px;
   color: rgba(245, 245, 245, 0.877);
-  }
+}
 
-  .locationTextbox {
+.locationTextbox {
   width: 80%;
-  }
+}
+
 
 
 /* search check */
@@ -244,7 +284,39 @@ padding: 30px;
 
 .searchSwitchModeBtn {
   float: right;
+
 }
+
+
+@media screen and (max-width: 400px) {
+
+  .searchWindowTitle {
+    text-align: center;
+    font-size: 15px;
+    letter-spacing: 3px;
+    color: rgba(245, 245, 245, 0.877);
+  }
+
+
+  .locationTextBoxes {
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+}
+
+  .extraInfoFieldDiv {
+    margin-left: 25px;
+  }
+
+  .extraInfoDiv {
+    margin-top: -5px;
+  }
+
+
+}
+
+
+
 /* ===============================SEARCH LOCATION DIV END======================= */
 
 /* ===================================CURRENT LOCATION DIV START==================== */
@@ -258,6 +330,7 @@ padding: 30px;
 
 .currLocBackBtn {
   color: antiquewhite;
+  border-top-left-radius: 15px;
   background-color: cadetblue;
   border-top-color: cadetblue;
   border-bottom-color: cadetblue;
@@ -267,6 +340,7 @@ padding: 30px;
 
 .currLocBackBtn:hover {
   color: antiquewhite;
+  border-top-left-radius: 15px;
   background-color: #426e70;
   border-top-color: #426e70;
   border-bottom-color: #426e70;
@@ -465,6 +539,49 @@ padding: 30px;
 .currSwitchModeBtn {
   float: right;
 }
+
+@media screen and (max-width: 400px) {
+
+
+  .currLocTitle {
+    text-align: center;
+    font-size: 15px;
+    letter-spacing: 3px;
+    color: rgba(245, 245, 245, 0.877);
+  }
+
+  .boxSeparator {
+    display: flex;
+    margin-top: 30px;
+    margin-left: 8%;
+  }
+
+  .currLocTextBoxes {
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+  }
+
+  .extraInfoDropDown {
+    margin-top: 10%;
+  }
+
+  .extraInfoDropDown_2 {
+    margin-top: 10%;
+  }
+
+  .extraInfoFieldDiv {
+    margin-left: 25px;
+  }
+
+  .extraInfoDiv_2 {
+    margin-top: -5px;
+  }
+
+
+}
+
+
 /* ===================================CURRENT LOCATION DIV END====================  */
 
 
@@ -671,4 +788,3 @@ margin-top: 10%;
 display:flex;
 justify-content: space-evenly;
 }
-
